<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloPessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titulo_Pessoas"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHomens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16px"
                    android:text="@string/Homens" />

                <EditText
                    android:id="@+id/edtHomens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMulheres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mulheres" />

                <EditText
                    android:id="@+id/edtMulheres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCrianças"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Criancas" />

                <EditText
                    android:id="@+id/edtCrianças"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16px"
                    android:layout_marginRight="16px"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTituloCarnes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:text="@string/Titulo_Carnes"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbCarneCOsso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CarneOsso" />

            <CheckBox
                android:id="@+id/cbCarneSOsso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CarneSOsso" />

            <CheckBox
                android:id="@+id/cbFrango"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Frango" />

            <CheckBox
                android:id="@+id/cbLinguica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Linguica" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Calcular"
                tools:layout_editor_absoluteX="197dp"
                tools:layout_editor_absoluteY="136dp" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="306dp"
                android:layout_marginTop="10px"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
                tools:layout_editor_absoluteX="39dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>